{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 10,
  "lineage": "b745e8b8-052e-2002-67e7-8fd2c56168c7",
  "resources": [
    {
      "module": "module.nagios",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:472258325188:instance/i-00bb7be0b3db74e9c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00bb7be0b3db74e9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "minhachave",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ff46856ca0aac949",
            "private_dns": "ip-10-0-0-15.ec2.internal",
            "private_ip": "10.0.0.15",
            "public_dns": "ec2-3-85-98-251.compute-1.amazonaws.com",
            "public_ip": "3.85.98.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dfaea853f7c18f0f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b485962acb2cbff",
            "tags": {
              "Name": "Nagios"
            },
            "tags_all": {
              "Name": "Nagios"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bbc1464e58e3ad97"
            ]
          },
          "dependencies": [
            "module.sg_nagios.aws_security_group.sgmain",
            "module.vpca.aws_subnet.vpc-public-0",
            "module.vpca.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.node_a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:472258325188:instance/i-077f56c69abd3aba7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077f56c69abd3aba7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "minhachave",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01e77ad94d4c0abbc",
            "private_dns": "ip-10-0-0-14.ec2.internal",
            "private_ip": "10.0.0.14",
            "public_dns": "ec2-54-91-113-241.compute-1.amazonaws.com",
            "public_ip": "54.91.113.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f9373c6352ad5bf1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b485962acb2cbff",
            "tags": {
              "Name": "Node_a"
            },
            "tags_all": {
              "Name": "Node_a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bbc1464e58e3ad97"
            ]
          },
          "dependencies": [
            "module.sg_nagios.aws_security_group.sgmain",
            "module.vpca.aws_subnet.vpc-public-0",
            "module.vpca.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_nagios",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgmain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472258325188:security-group/sg-0bbc1464e58e3ad97",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbc1464e58e3ad97",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_vpc_10_public-sg_vpc_10_public",
            "name_prefix": "",
            "owner_id": "472258325188",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_vpc_10_public",
              "Terraform": "true",
              "ambiente": "sg_vpc_10_public",
              "app": "sg_vpc_10_public",
              "kubernetes.io/cluster/eks-finnet": "shared",
              "modalidade": "sg_vpc_10_public",
              "projeto": "sg_vpc_10_public"
            },
            "tags_all": {
              "Name": "sg_vpc_10_public",
              "Terraform": "true",
              "ambiente": "sg_vpc_10_public",
              "app": "sg_vpc_10_public",
              "kubernetes.io/cluster/eks-finnet": "shared",
              "modalidade": "sg_vpc_10_public",
              "projeto": "sg_vpc_10_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eb383c422010c88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpca.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpca",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472258325188:internet-gateway/igw-006aa3b2e835ad769",
            "id": "igw-006aa3b2e835ad769",
            "owner_id": "472258325188",
            "tags": {
              "APP": "main",
              "Ambiente": "work-vpc",
              "Name": "Work IGW",
              "Projeto": "main",
              "Terraform": "true",
              "kubernetes.io/cluster/teste": "shared"
            },
            "tags_all": {
              "APP": "main",
              "Ambiente": "work-vpc",
              "Name": "Work IGW",
              "Projeto": "main",
              "Terraform": "true",
              "kubernetes.io/cluster/teste": "shared"
            },
            "vpc_id": "vpc-04eb383c422010c88"
          },
          "dependencies": [
            "module.vpca.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpca",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472258325188:route-table/rtb-05901ec7377ce9d7a",
            "id": "rtb-05901ec7377ce9d7a",
            "owner_id": "472258325188",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006aa3b2e835ad769",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "APP": "cloudit",
              "Ambiente": "work-vpc",
              "Name": "Work Publick Route Table",
              "Projeto": "cloudit",
              "Terraform": "true",
              "kubernetes.io/cluster/work-vpc-work-vpc": "shared"
            },
            "tags_all": {
              "APP": "cloudit",
              "Ambiente": "work-vpc",
              "Name": "Work Publick Route Table",
              "Projeto": "cloudit",
              "Terraform": "true",
              "kubernetes.io/cluster/work-vpc-work-vpc": "shared"
            },
            "vpc_id": "vpc-04eb383c422010c88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpca.aws_internet_gateway.vpc-gw",
            "module.vpca.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpca",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-dmz-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04602c7c930cca794",
            "route_table_id": "rtb-05901ec7377ce9d7a",
            "subnet_id": "subnet-04b485962acb2cbff"
          },
          "dependencies": [
            "module.vpca.aws_internet_gateway.vpc-gw",
            "module.vpca.aws_route_table.route-dmz",
            "module.vpca.aws_subnet.vpc-public-0",
            "module.vpca.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpca",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-public-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472258325188:subnet/subnet-04b485962acb2cbff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-04b485962acb2cbff",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "472258325188",
            "tags": {
              "APP": "cloudit",
              "Ambiente": "work-vpc",
              "Name": "Work Public Subnet",
              "Projeto": "cloudit",
              "Terraform": "true",
              "kubernetes.io/cluster/work-vpc-work-vpc": "shared"
            },
            "tags_all": {
              "APP": "cloudit",
              "Ambiente": "work-vpc",
              "Name": "Work Public Subnet",
              "Projeto": "cloudit",
              "Terraform": "true",
              "kubernetes.io/cluster/work-vpc-work-vpc": "shared"
            },
            "vpc_id": "vpc-04eb383c422010c88"
          },
          "dependencies": [
            "module.vpca.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpca",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472258325188:vpc/vpc-04eb383c422010c88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02383024876159960",
            "default_route_table_id": "rtb-0e20a9db6ddbe8a98",
            "default_security_group_id": "sg-0cd73fa66484c3165",
            "dhcp_options_id": "dopt-3b5d7941",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04eb383c422010c88",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e20a9db6ddbe8a98",
            "owner_id": "472258325188",
            "tags": {
              "APP": "main",
              "Ambiente": "work-vpc",
              "Name": "work-vpc",
              "Projeto": "main",
              "Terraform": "true",
              "kubernetes.io/cluster/teste": "shared"
            },
            "tags_all": {
              "APP": "main",
              "Ambiente": "work-vpc",
              "Name": "work-vpc",
              "Projeto": "main",
              "Terraform": "true",
              "kubernetes.io/cluster/teste": "shared"
            }
          }
        }
      ]
    }
  ]
}